--- a/DevTriviaApplication/src/main/resources/static/index.html
+++ b/DevTriviaApplication/src/main/resources/static/index.html
@@ -34,7 +34,7 @@
 
 <!-- This second form sends the player to the game page. -->
 <!-- When the player clicks Play, the browser will go to game.html where the question appears. -->
-<form action="game.html">
+<form action="/game.html">
     <button type="submit">Play</button>
 </form>
 
