--- a/DevTriviaApplication/src/main/resources/static/game.html
+++ b/DevTriviaApplication/src/main/resources/static/game.html
@@ -15,8 +15,9 @@
 
 <!-- This container is where I will inject the question, choices, and a result message. -->
 <div id="app"><p>Loading question...</p></div>
-
 <!-- This script contains the logic that fetches the question and handles user interaction. -->
+<script src="/game.js"></script>
+<!--
 <script>
   // I am waiting for the DOM to be fully loaded before I run any of my code.
   document.addEventListener('DOMContentLoaded', async () => {
@@ -24,6 +25,7 @@
     const root = document.getElementById('app');
 
     try {
+
       // I am requesting JSON data from the server endpoint that returns trivia questions.
       // Because I used a relative path (/api/questions), it will call the same host and port that served this page.
       const res = await fetch('/api/questions');
@@ -34,10 +36,14 @@
       // I am converting the response body into a JavaScript array of questions.
       const questions = await res.json();
 
-      // For this demo, I will use the first question in the array.
 
-        const q = questions[0];
-        const optionTexts = [q.optionA, q.optionB, q.optionC, q.optionD];
+
+      // For this demo, I will use the first question in the array.
+      let index = 0
+      //for (index; index < questions.length; i++) {
+
+      const q = questions[index];
+      const optionTexts = [q.optionA, q.optionB, q.optionC, q.optionD];
 
 
         // I am replacing the loading message with the question UI.
@@ -46,14 +52,18 @@
         root.innerHTML = `
               <h2>${q.text}</h2>
               <ol id="choices"></ol>
-              <button id="submit" disabled>Submit</button>
+              <button id="submit" disabled>Submit</button></br>
+              <button id="next" disabled>Next</button>
+
               <p id="result"></p>
               `;
 
 
         const choicesEl = document.getElementById('choices');
         const submit = document.getElementById('submit');
+        const next = document.getElementById('next')
         const result = document.getElementById('result');
+
 
         // Use Object.values() to iterate over the array of option TEXTS
         optionTexts.forEach((text) => {
@@ -70,6 +80,7 @@
 
         // When the user clicks Submit, I will check whether their selected index matches the correct answer index.
         submit.addEventListener('click', () => {
+          next.disabled = false;
           // This finds whichever radio button is currently selected.
           const sel = document.querySelector('input[name="ans"]:checked');
           const selAnswer = decodeURIComponent(sel.value);
@@ -86,9 +97,10 @@
           choicesEl.querySelectorAll('input[type="radio"]').forEach(radio => radio.disabled = true);
         });
 
-
-
-
+        next.addEventListener('click', () => {
+          index += 1
+          next.disabled = true;
+        });
     }
     catch
       (e)
@@ -102,6 +114,9 @@
 
 
   });
-</script>
+</script> -->
+<form action="/index.html">
+  <button type="submit">Exit</button>
+</form>
 </body>
 </html>
