Edited Game page and added site Navigation functionality in addition to User Login.

--- a/DevTriviaApplication/src/main/resources/static/account.html
+++ b/DevTriviaApplication/src/main/resources/static/account.html
@@ -5,6 +5,15 @@
   <title>Account</title>
 </head>
 <body>
-<h1>Your Account</h1>
+<h1><a href="/index.html">DevTrivia</a></h1>
+<h2>Your Account</h2>
+<nav>
+  <ul>
+    <li><a href="game.html">Play</a></li>
+    <li><a href="forum.html">Forums</a></li>
+    <li><a href="account.html">Account</a></li>
+    <li>logout<!--finish later--></li>
+  </ul>
+</nav>
 </body>
 </html>
