--- a/DevTriviaApplication/src/main/resources/static/forum.html
+++ b/DevTriviaApplication/src/main/resources/static/forum.html
@@ -5,6 +5,16 @@
   <title>Forum</title>
 </head>
 <body>
+<h1><a href="/index.html">DevTrivia</a></h1>
+<h2>Forums</h2>
+<nav>
+  <ul>
+    <li><a href="game.html">Play</a></li>
+    <li><a href="forum.html">Forums</a></li>
+    <li><a href="account.html">Account</a></li>
+    <li>logout<!--finish later--></li>
+  </ul>
+</nav>
 
 </body>
 </html>
