--- a/DevTriviaApplication/src/main/resources/static/index.html
+++ b/DevTriviaApplication/src/main/resources/static/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>DevTrivia – Home</title>
 
     <!-- This page is the main starting point for my DevTrivia project. -->
@@ -19,15 +18,20 @@
 <body>
 <!-- This is the main title of my web app. I want it to be the first thing people see. -->
 <h1>DevTrivia</h1>
+<nav>
+    <ul>
+        <li><a href="game.html">Play</a></li>
+        <li><a href="forum.html">Forums</a></li>
+        <li><a href="account.html">Account</a></li>
+        <li>logout<!--finish later--></li>
+    </ul>
+</nav>
 
 <!-- This is a short line to describe what my app is about. -->
 <p>Are you smarter than a Senior Dev?</p>
 
 <!-- I am using two forms with buttons to simulate basic navigation for now. -->
 <!-- The first form is for logging in, but it does not do anything yet because this is just a prototype. -->
-<form action="index.html">
-    <button type="submit">Log In</button>
-</form>
 
 <!-- I added this div with a height value so there is space between the buttons. -->
 <div style="height: 25px;"></div>
