--- a/DevTriviaApplication/src/main/resources/static/game.html
+++ b/DevTriviaApplication/src/main/resources/static/game.html
@@ -3,34 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <title>DevTrivia – Game</title>
-  <script src="/game.js"></script>
+  <!-- Load the game logic after the DOM is parsed -->
+  <script src="/game.js" defer></script>
 
-  <!-- This page shows the simple trivia game screen for my DevTrivia project. -->
-  <!-- It will load one question from my Java server when the page finishes loading. -->
-  <!-- I am keeping the layout very basic on purpose since this is an early prototype. -->
+  <!-- This page shows the trivia game screen for my DevTrivia project. -->
 </head>
 
 <body>
-<!-- This is the title with a link back to the home page, so I can navigate easily. -->
+<!-- Title with a link back to the home page -->
 <h1><a href="../">DevTrivia</a></h1>
+
 <nav>
   <ul>
-    <li><a href="game.html">Play</a></li>
-    <li><a href="forum.html">Forums</a></li>
-    <li><a href="account.html">Account</a></li>
-    <li>logout<!--finish later--></li>
+    <li><a href="/">Home</a></li>
+    <li><a href="/game.html">Play Game</a></li>
+    <li><a href="/profile.html">Profile</a></li>
   </ul>
 </nav>
 
+<!-- Start game button -->
 <button id="play">Play</button>
-<!-- This container is where I will inject the question, choices, and a result message. -->
+
+<!-- This container is where I will inject the question, choices, and result message. -->
 <div id="app"><p></p></div>
-<!-- This script contains the logic that fetches the question and handles user interaction. -->
 
-
-<form id="exit-form" action="@{/api/sessions}" method="post">
-  <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
-  <button type="submit" id = "exit-button">Exit</button>
-</form>
+<!-- Exit button (no form, handled entirely in JS) -->
+<button type="button" id="exit-button">Exit</button>
 </body>
 </html>
